deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nodeapp
  name: omar-nodeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nodeapp
    spec:
      containers:
      - image: gcr.io/wideops-candidate6/omar-nodeapp:test
        name: omar-webapp
        imagePullPolicy: Always
        resources: {}
        ports:
          - containerPort: 80 
status: {}


---

apiVersion: v1
kind: Service
metadata:
  name: omar-nodeapp
  labels:
    run: nodeapp
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: nodeapp
  type: LoadBalancer
