sec-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: nodeapp-secure
spec:
  selector:
    app: nodeapp
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
