ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress
spec:
  defaultBackend:
    service:
      name: nodeapp
      port:
        number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodeapp-ingress-https
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - hosts:
    - tls.omar-nodeapp.com
    secretName: nodeapp-tls
  backend: 
    serviceName: nodeapp-secured
    sericePort: 443
